--- a/src/Header/Header.css
+++ b/src/Header/Header.css
@@ -13,7 +13,7 @@
     height: 70px;
     padding: 0 12%;
     position: fixed;
-    background-color: rgba(255, 255, 255, 0.516);
+    background-color: rgba(255, 255, 255, 0.464);
 }
 
 .inner-header-container {
@@ -58,4 +58,14 @@
 .sections li:hover {
     cursor: pointer;
     font-size: 18px;
+}
+
+@media screen and (max-width: 650px) {
+    .header-container {
+        padding: 0;
+    }
+    
+    .inner-header-container {
+        width: 100%;
+    }
 }
