--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -55,14 +55,14 @@
 }
 
 @media screen and (max-width: 650px) {
-    .inner-landing-container h1 {
+    .upper-landing-container h1 {
         width: 100%;
         text-align: center;
         line-height: 70px;
         font-size: 48px;
     }
 
-    .inner-landing-container h2 {
+    .lower-landing-container h2 {
         width: 100%;
         text-align: center;
         font-size: 16px;
