final styling fixes

--- a/src/Landing/Landing.css
+++ b/src/Landing/Landing.css
@@ -60,6 +60,7 @@
         text-align: center;
         line-height: 70px;
         font-size: 48px;
+        padding: 10px 0;
     }
 
     .lower-landing-container h2 {
