--- a/src/Projects/Projects.css
+++ b/src/Projects/Projects.css
@@ -168,3 +168,9 @@
     color: white;
     font-size: 12px;
 }
+
+@media screen and (max-width: 650px) {
+    .project-section {
+        padding-top: 40px;
+    }
+}
